2012-01-23 1.4.0 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* add nofollow attribute to tree expansion/collapsing links to reduce overzealous spidering

2011-12-13 1.3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* improve usage of deep Opac links (introduce a 'General' element for the records associated to parent nodes)
	* fix bug with importing introduced in 1.2.1

2011-11-25 1.2.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* switch default Opac URL to https
	* only retrieve records with statusID = 0 in database queries to avoid duplicates
	* use quotation marks in term used for index scans
	* deal with differing data structure returned by TYPO3 4.6’s t3lib_div::readLLXMLfile()
	* fix incorrect processing of the shallowSearch TypoScript setting

2011-11-24 1.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* vastly reduce downtime due to database update (batch add new records, switch with old records after import has finished) REQUIRES DATABASE SCHEMA UPDATE
	* fix localisation problem in TYPO3 4.6
	* extend timeout for long scheduler actions to 20 minutes
	* add searchFields to ext_tables.php

2011-11-11 1.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* adapt hitcount usage to current Opac indexing
	* remove support for old-school subject tree style
	* more generic tree item creation, allowing links for the root node
	* improve default look of multiline items and GOK ID display

2011-09-01 1.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* final tweaks, we’ll start using this

2011-08-23 0.9.13 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* compute total hit counts for Opac LKLs
	* add total hitcounts to database
	* add link to full subject hierarchy to tree output
	* add plugin.tx_nkwgok_pi1.shallowSearch setting to toggle between deep and shallow searches

2011-08-02 0.9.11 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Reduce logging
	* Cleanup

2011-08-01 0.9.10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>